# tokimo-package-client-api

./: Cargo.toml  README.md
src/: assrt.rs  cache.rs  cloudflare.rs  error.rs  geocoding.rs  github_releases.rs  lib.rs  model_downloader.rs  nominatim.rs  open_meteo.rs  pan115_auth.rs  timor_holiday.rs  types.rs  weclaw.rs
src/downloaders/: aria2.rs  deluge.rs  mod.rs  pan115.rs  qbittorrent.rs  rtorrent.rs  traits.rs  transmission.rs  xunlei.rs
src/metadata_providers/: bangumi.rs  deezer.rs  douban.rs  fanart.rs  javbus.rs  javdb.rs  lrclib.rs  lyrics.rs  mod.rs  musicbrainz.rs  nager_date.rs  netease.rs  omdb.rs  qidian.rs  qqmusic.rs  registry.rs  selector.rs  spotify.rs  stashdb.rs  thetvdb.rs  tpdb.rs  wikipedia.rs
src/metadata_providers/tmdb/: mod.rs  types.rs
