[package]
name = "tokimo-package-client-api"
version = "0.1.0"
edition = "2024"
description = "External API clients for media metadata services"


[lib]
name = "tokimo_package_client_api"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true, features = ["cookies", "form", "query", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }
scraper = "0.26"
regex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
percent-encoding = "2"
md-5 = { workspace = true }
hex = { workspace = true }
zip = { version = "8", default-features = false, features = ["deflate"] }
bytes = { workspace = true }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = { workspace = true }
urlencoding = "2"
tokimo-web-fetch = { path = "../tokimo-package-web-fetch" }
async-trait = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
