[package]
name = "tokimo-package-client-api"
version = "0.1.0"
edition = "2024"
description = "External API clients for media metadata services"


[lib]
name = "tokimo_package_client_api"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "rustls", "cookies", "form", "query", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync", "time", "macros", "fs"] }
thiserror = "2"
tracing = "0.1"
scraper = "0.26"
regex = "1"
base64 = "0.22"
url = "2"
hmac = "0.13"
sha2 = "0.11"
futures-util = "0.3"
futures = "0.3"
percent-encoding = "2"
md-5 = "0.11"
hex = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
bytes = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.9"
urlencoding = "2"
tokimo-web-fetch = { path = "../tokimo-package-web-fetch" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
